sqlxo/tests/orm/derive/try/err/duplicate_key.stderr
error: duplicate key `table_name`
 --> tests/orm/derive/try/err/duplicate_key.rs:8:27
  |
8 | #[sqlxo(table_name = "a", table_name = "b")]
  |                           ^^^^^^^^^^^^^^^^
